# browser-search

./: .gitignore  .mcp.json  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SUPPORT.md  example.py  pyproject.toml
.agents/plugins/: marketplace.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml  deploy-pages.yml
browser_search_mcp/: __init__.py  __main__.py  bridge.py  bridge_provider.py  cdp.py  config.py  http_api.py  parsers.py  providers.py  search.py  server.py  setup_assistant.py
docs/: LAUNCH_POSTS.md  LAUNCH_WEEK.md
tests/: test_cli.py  test_config.py  test_search_session.py  test_server.py
website/: index.html
