[project]
name = "browser-search-mcp"
version = "0.1.0"
description = "MCP server for web search via real browser - enables any LLM (Ollama, Claude, etc.) to search the web"
authors = [
    {name = "fangsylar-pixel"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=1.0",
    "playwright>=1.40",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.urls]
homepage = "https://github.com/fangsylar-pixel/browser-search-mcp"
repository = "https://github.com/fangsylar-pixel/browser-search-mcp"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["browser_search_mcp*"]

[project.scripts]
browser-search-mcp = "browser_search_mcp.__main__:main"
