[project]
name = "browser-search-mcp"
version = "0.2.0"
description = "MCP server for web search via real browser - enables any LLM (Ollama, Claude, Codex) to search the web"
authors = [
    {name = "fangsylar-pixel"},
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["mcp", "mcp-server", "model-context-protocol", "web-search", "ai-agent", "local-llm", "ollama", "codex", "browser-automation", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastmcp>=1.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.100", "uvicorn>=0.20"]
brave = ["httpx>=0.24"]
tavily = ["tavily-python>=0.3"]
all = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "httpx>=0.24",
    "tavily-python>=0.3",
]

[project.urls]
homepage = "https://github.com/fangsylar-pixel/browser-search"
repository = "https://github.com/fangsylar-pixel/browser-search"
documentation = "https://fangsylar-pixel.github.io/browser-search/"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["browser_search_mcp*"]

[project.scripts]
browser-search-mcp = "browser_search_mcp.__main__:main"
